5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1637_2703.log
== TEST (2019-04-09 10:56:52) 
-- CODE:
idade = int(input("Determine a idade: "))

if (idade >= 18)
print ("eleitor")
else
print ("nao_eleitor")
print(print)
-- ERROR:
File "XXXX", line 3
    if (idade >= 18)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:57:13) 
-- CODE:
idade = int(input("Determine a idade: "))

if (idade >= 18):
print ("eleitor")
else:
print ("nao_eleitor")
print(print)
-- ERROR:
File "XXXX", line 4
    print ("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:57:34) 
-- CODE:
idade = int(input("Determine a idade: "))

if (idade >= 18):
mensagem ("eleitor")
else:
mensagem ("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    mensagem ("eleitor")
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:02) 
-- CODE:
idade = int(input("Determine a idade: "))

if (idade >= 18):
mensagem = ("eleitor")
else:
mensagem = ("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    mensagem = ("eleitor")
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:15) 
-- CODE:
idade = int(input("Determine a idade: "))

if (idade >= 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:58:24) 
-- CODE:
idade = int(input("Determine a idade: "))

if (idade >= 18):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
print(mensagem)
-- EXECUTION TIME:
0.206161
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
